/**
 * This file is auto generated by tto v0.5.8 !
 * If you want to modify this code, please read the guide 
 * to modify code template.
 *
 * Get started: https://github.com/ixre/tto
 *
 * Copyright (C) 2009-2024 56X.NET, All rights reserved.
 *
 * name : chat_conversation_service.proto
 * author : jarrysix
 * date : 2024/06/26 21:47:08
 * description :
 * history :
 */




 syntax = "proto3";
 option go_package = "./;proto";
 option java_package = "com.github.go2o.rpc";
 
 import "global.proto";
 
 // 聊天会话服务
 service ChatService {
    // 获取聊天会话
    rpc getConversation (ChatConversationRequest) returns (ChatConversationResponse);
    // 删除会话
	rpc destroyConversation(ConversationIdRequest) returns (TxResult);
    // 绑定业务关联单号
    rpc bindOutOrderNo(BindChatOutOrderNoRequest) returns (TxResult);
    // 发送消息，并返回消息编号
    rpc send(SendMsgRequest)returns (SendMsgResponse);
	// 获取最近的消息
	rpc fetchMsgList(FetchMsgRequest) returns (FetchMsgResponse);
	// 更新消息扩展数据
	rpc updateMsgAttrs(UpdateMsgAttrRequest) returns (TxResult);
    // 获取消息
    rpc getMsg(MsgIdRequest) returns (SMsg);
	// 撤回消息
	rpc revertMsg(MsgIdRequest) returns (TxResult);
	// 删除消息
	rpc deleteMsg(MsgIdRequest)returns(TxResult);
 }
 
 // 保存聊天会话请求
 message SaveConversationRequest{
     // 编号
     int64 id = 1;
     // 编码
     string key = 2;
     // 会话发起人
     int64 sid = 3;
     // 会话回复人
     int64 rid = 4;
     // 预留标志
     int32 flag = 5;
     // 聊天类型,1:用户  2:客服
     int32 chatType = 6;
     // 打招呼内容
     string greetWord = 7;
     // 最后聊天时间
     int64 lastChatTime = 8;
     // LastMsg
     string lastMsg = 9;
     // 关联业务单号
     string outOrderNo = 10;
     // 创建时间
     int64 createTime = 11;
     // 更新时间
     int64 updateTime = 12;
 }
 
 
 // 聊天会话请求
 message ChatConversationRequest{
    // 用户编号
    int64 uid = 1;
    // 聊天用户编号
    int64 rid = 2;
    // 聊天类型,0:用户 1:客服
    int64 chatType = 3;
    // 关联业务单号
    string outOrderNo = 4;
    // 打招呼内容
    string greetWord = 5;
 }

 // 聊天用户信息
 message SChatUserProfile{
    // 头像
    string profilePhoto = 1;
    // 用户代码
    string userCode = 2;
    // 昵称
    string nickname = 3;
    // 用户角色
    int32 userRole = 4;
 }

 // 聊天会话响应
 message ChatConversationResponse{
    // 错误码
    int32 errCode = 1;
    // 编号
    int64 convId = 2;
    // 编码
    string key = 3;
    // 会话发起人
    int64 sid = 4;
    // 会话回复人
    int64 rid = 5;
    // 回复人信息
    SChatUserProfile chatProfile = 6;
    // 聊天类型
    int32 chatType = 8; 
    // 最后消息
    string lastMsg = 9;
    // 最后聊天时间
    int64 lastChatTime = 10;
 }
 
 // 绑定关联业务单号请求
 message BindChatOutOrderNoRequest{
    // 用户编号
    int64 uid = 1;
    // 会话编号
    int64 convId = 2;
    // 关联业务单号
    string outOrderNo = 3;
 }

 // 聊天会话
 message SConversation{
     // 编号
     int64 id = 1;
     // 编码
     string key = 2;
     // 会话发起人
     int64 sid = 3;
     // 会话回复人
     int64 rid = 4;
     // 预留标志
     int32 flag = 5;
     // 聊天类型,1:用户  2:客服
     int32 chatType = 6;
     // 打招呼内容
     string greetWord = 7;
     // 最后聊天时间
     int64 lastChatTime = 8;
     // LastMsg
     string lastMsg = 9;
     // 关联业务单号
     string outOrderNo = 10;
     // 创建时间
     int64 createTime = 11;
     // 更新时间
     int64 updateTime = 12;
 }

// 会话编号请求
message ConversationIdRequest{
  // 用户编号
  int64 uid = 1;
  // 会话编号
  int64 convId = 2;
}

// 发送消息消息请求
message SendMsgRequest{
    // 用户编号
    int64 uid = 1;
    // 会话编号
    int64 convId = 2;
    // 消息类型, 1: 文本  2: 图片  3: 表情  4: 文件  5:语音  6:位置  7:语音  8:红包  9:名片  11: 委托申请
    int32 msgType = 3;
    // 消息内容
    string content = 4;
    // 扩展数据
    map<string,string> extra = 5;
}

// 发送消息消息响应
message SendMsgResponse{
    // 错误码
    int32 errCode = 1;
    // 错误信息
    string errMsg = 2;
    // 消息编号
    int64 msgId = 3;
}


 // 查询聊天会话请求
 message FetchMsgRequest{
    // 用户编号
    int64 uid = 1;
    // 会话编号
    int64 convId = 2;
    // 查询时间
    int64 lastTime = 3;
    // 数量
    int32 size = 4;
    // 是否查询历史消息,false为查询最新消息
    bool historyMsg = 5;
 }

 // 会话编号请求
message MsgIdRequest{
    // 用户编号
    int64 uid = 1;
    // 会话编号
    int64 convId = 2;
    // 消息编号
    int64 msgId = 3;
}

// 更新消息属性请求
message UpdateMsgAttrRequest{
    // 用户编号
    int64 uid = 1;
    // 会话编号
    int64 convId = 2;
    // 消息编号
    int64 msgId = 3;
    // 属性
    map<string,string> attr = 4;
}
 
 // 查询聊天会话响应
 message FetchMsgResponse{
    // 消息列表
    repeated SMsg msgList = 1;
    // 是否已结束,没有更多消息
    bool isOver = 2;
 }


// 消息消息
message SMsg{
    // 编号
    int64 msgId = 1;
    // 发送人编号
    int64 sid = 2;
    // 消息类型, 1: 文本  2: 图片  3: 表情  4: 文件  5:语音  6:位置  7:语音  8:红包  9:名片  11: 委托申请
    int32 msgType = 3;
    // 消息标志: 1:提示 2:撤回 4:删除
    int32 msgFlag = 4;
    // 消息内容
    string content = 5;
    // 扩展数据
    map<string,string> extra = 6;
    // 创建时间
    int64 createTime = 7;
}
 