syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 基础服务
service RegistryService {
  /* 获取分组 */
  rpc GetGroups (Empty) returns (RegistryGroupResponse) {
  }

  /** 获取注册项 */
  rpc GetRegistry(String) returns (SRegistry){
  }

  /** 获取注册表键值,key */
  rpc GetValue (String) returns (RegistryValueResponse) {
  }

  /** 更新注册表值 */
  rpc UpdateValue (RegistryPair) returns (TxResult) {
  }

  /** 获取键值存储数据字典,keys */
  rpc GetValues (StringArray) returns (StringMap) {
  }

  /** 更新注册表键值 */
  rpc UpdateValues (StringMap) returns (TxResult) {
  }

  /** 搜索键值 */
  rpc Search(RegistrySearchRequest)returns(StringMap) {}

  /** 按键前缀获取键数据,prefix*/
  rpc FindRegistries (String) returns (StringMap) {
  }
  /** 搜索注册表,keyword */
  rpc SearchRegistry (String) returns (RegistriesResponse) {
  }
  /** 创建自定义注册表项,@defaultValue 默认值,如需更改,使用UpdateRegistry方法  */
  rpc CreateRegistry (RegistryCreateRequest) returns (TxResult) {
  }
}

message RegistriesResponse {
  repeated SRegistry value = 1;
}

message RegistryPair {
  string key = 1;
  string value = 2;
}

message RegistryValueResponse {
  string value = 1;
  string errMsg = 2;
}

message RegistryCreateRequest {
  // 键
  string key = 1;
  // 分组
  string group = 2;
  // 默认值
  string defaultValue = 3;
  // 描述
  string description = 4;
}

message RegistrySearchRequest {
  string key = 1;
}

/** 注册表 */
message SRegistry {
  /** 键 */
  string key = 1;
  /** 值 */
  string value = 2;
  /** 分组 */
  string group = 3;
  /** 默认值 */
  string defaultValue = 4;
  /** 可选值 */
  string options = 5;
  /** 标志 */
  sint32 flag = 6;
  /** 描述 */
  string description = 7;
}

message RegistryGroupResponse{
  repeated string value = 1;
}
